# watchtower

./: .env.example  .gitignore  Cargo.toml  HOW_IT_WORKS.md  README.md  run.sh  test.sh
src/: alert.rs  config.rs  domain.rs  lib.rs  main.rs  price.rs  token_registry.rs  utils.rs  watcher.rs
src/notifier/: console.rs  mod.rs  telegram.rs
