[package]
name = "watchtower"
version = "0.1.0"
authors = ["Juan Abimael Santos Castillo"]
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.0", default-features = false, features = [
    "macros",
    "rt-multi-thread",
    "time",
] }

# Serialization
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false }

# HTTP client
# Using 0.11.x to be compatible with ethers-providers (which requires this version)
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",
] }

# Error handling
anyhow = { version = "1.0", default-features = false }

# Logging
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
    "ansi",
] }

# Date/time
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "std",
] }

# Ethereum blockchain connectivity
ethers-core = { version = "2.0", default-features = false }
ethers-providers = { version = "2.0", default-features = false, features = [
    "ws",     # Only WebSocket support we need
    "rustls", # Use rustls instead of native-tls
] }

# Environment variables
dotenv = { version = "0.15", default-features = false }

# Hex encoding
hex = { version = "0.4", default-features = false }

[dev-dependencies]
# HTTP mocking for testing external API calls
mockito = { version = "1.7", default-features = false }

# Async test utilities
tokio-test = { version = "0.4", default-features = false }

[profile.release]
opt-level = "z"   # Optimize for size
lto = true        # Link-time optimization
codegen-units = 1 # Better optimization
strip = true      # Strip symbols

# Build optimization for faster compilation
[profile.dev]
opt-level = 0
debug = true

